Fix jumping of loading animation

--- a/src/styles/application/_loading.scss
+++ b/src/styles/application/_loading.scss
@@ -1,7 +1,16 @@
 .integr8ly-loadingscreen {
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 0;
+
+  &-spacer {
+    align-self: center;
+    min-height: 450px;
+    min-width: 380px;
+    margin-top: 75px;
+    z-index: 5;
+  }
 
   &-backdrop {
     position: fixed;
@@ -23,11 +32,6 @@
     top: 85px;
     right: 25px;
     background-image: url("../../img/RedHatLogo.png");
-  }
-
-  &-throbber {
-    margin-top: 75px;
-    z-index: 5;
   }
 
   &-text {
